--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <title>MEAN PROJECT</title>
 </head>
 <body>
-    <h1>{{appName}}</h1>
-    <h5>{{authors}}</h5>
-
+{{> header}}
+    <h1>HOME</h1>
+    {{{body}}}
+    
 </body>
+<script src="/js/bootstrap.js"></script>
+<script src="/js/popper.js"></script>
 </html>
