--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <title>MEAN PROJECT</title>
-</head>
-<body>
-{{> header}}
-    <h1>HOME</h1>
-    {{{body}}}
-    
-</body>
-<script src="/js/bootstrap.js"></script>
-<script src="/js/popper.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/bootstrap.css">
+        <link rel="stylesheet" href="/css/all.min.css">
+        <title>MEAN PROJECT</title>
+    </head>
+    <body>
+    {{> header}}
+        <h1>HOME</h1>
+        {{{body}}}
+        
+    </body>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/popper.js"></script>
+    <script src="/js/all.min.js"></script>
 </html>
