--- a/src/views/pages/register.hbs
+++ b/src/views/pages/register.hbs
@@ -9,14 +9,18 @@
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                
 
-                <form class="mx-1 mx-md-4" method="post" action="/user/register">
+                <form class="mx-1 mx-md-4" method="POST" action="/user/register">
 
+                  {{#if msg}}
+                      <p class="error bg-color-red me-3 error">{{msg}}</p>
+                  {{/if}}
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="f-name">First Name</label>
-                      <input type="text" id="f-name" class="form-control" required />
+                      <input type="text" name="firstname" id="f-name" class="form-control" required />
                       
                     </div>
                   </div>
@@ -24,7 +28,7 @@
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="l-name">Last Name</label>
-                      <input type="text" id="l-name" class="form-control" />
+                      <input type="text" name="lastname" id="l-name" class="form-control" />
                     </div>
                   </div>
                   {{!-- firstname, lastname, email, telephone, role, password --}}
@@ -33,23 +37,23 @@
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="e-mail">Email</label>
-                      <input type="email" id="e-mail" class="form-control" />
+                      <input type="email" name="email" id="e-mail" class="form-control" />
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                    <i class="fas fa-mobile fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="phone">Phone</label>
-                      <input type="phone" id="phone" class="form-control" />
+                      <input type="phone" name="phone" id="phone" class="form-control" />
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <label class="form-label" for="pass">Password</label>
-                      <input type="password" id="pass" class="form-control" />
+                      <label class="form-label" for="password">Password</label>
+                      <input type="password" name="password" id="password" class="form-control" />
                     </div>
                   </div>
 
@@ -57,7 +61,7 @@
                     <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="pass-bis">Repeat your password</label>
-                      <input type="password" id="pass-bis" class="form-control" />
+                      <input type="password" name="password2" id="pass-bis" class="form-control" />
                     </div>
                   </div>
 
@@ -74,7 +78,7 @@
                   </div>
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="button" class="btn btn-primary btn-lg">Register</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Register</button>
                   </div>
 
                 </form>
