made some cleaning

--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -10,10 +10,9 @@
         <title>MEAN PROJECT</title>
     </head>
     <body>
-    {{> header}}
-        <h1>HOME</h1>
+        {{> header}}
         {{{body}}}
-        
+        {{> footer}}
     </body>
     <script src="/js/bootstrap.js"></script>
     <script src="/js/popper.js"></script>
