--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -8,7 +8,7 @@
                 <div class="collapse navbar-collapse" id="bs4navbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link active" href="/">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About Us</a>
