login/logout --sys.config

--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -19,9 +19,9 @@
                                 <label class="form-check-label" for="rememberMe"> Remember me</label>
                             </div> --}}
                             <a class="dropdown-item" href="#">Forgot password?</a>
-                            {{#if error}}
+                            {{!-- {{#if error}}
                             <span>the address or the password is not correct</span>
-                            {{/if}}
+                            {{/if}} --}}
                         </div>
                         <div class="col-12">
                             <button type="submit" class="btn btn-dark float-end">Login</button>
