--- a/src/views/pages/register.hbs
+++ b/src/views/pages/register.hbs
@@ -66,14 +66,9 @@
                   </div>
 
                   <div class="form-check d-flex justify-content-center mb-5">
-                    <input
-                      class="form-check-input me-2"
-                      type="checkbox"
-                      value=""
-                      id="term-chk"
-                    />
+                    
                     <label class="form-check-label" for="term-chk">
-                      I agree all statements in <a href="#!">Terms of service</a>
+                      Already have an account? <a href="/user/login">Login</a>
                     </label>
                   </div>
 
