--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -17,7 +17,7 @@
             <div class="col-12">{{> header}}</div>
         <div class="col-12">{{{body}}}</div>
         <div class="col-12">{{> footer}}</div>
-        </div>
+        {{!-- </div> --}}
     </div>
 </body>
 <script src="/js/bootstrap.js"></script>
