initial commit in upgrade

--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,5 +1,5 @@
- <header class="bs4header bg-primary mb-5">
-        <div class="container">
+ <header class="bs4header container-fluid bg-primary mb-5">
+        {{!-- <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand" href="#"><b><i>Brand Name</i></b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs4navbar" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,6 +35,32 @@
                         </li>
                     </ul>
                 </div>
+                <div class="navbar-nav ms-auto">
+                    <a href="/user/login" class="nav-item nav-link">Login</a>
+                </div>
             </nav>
+        </div> --}}
+
+        <nav class="navbar navbar-expand-lg navbar-dark ">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">
+                <img src="/examples/images/logo.svg" height="28" alt="CoolBrand">
+            </a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav">
+                    <a href="/" class="nav-item nav-link active">Home</a>
+                    <a href="#" class="nav-item nav-link">Profile</a>
+                    <a href="#" class="nav-item nav-link">Messages</a>
+                    <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
+                </div>
+                <div class="navbar-nav ms-auto">
+                    <a href="/user/login" class="nav-item nav-link">Login</a>
+                </div>
+            </div>
         </div>
+    </nav>
+        
     </header>
