--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -1,6 +1,3 @@
 <h1>MAIN</h1>
-{{#if login}}
-<h3>user is connected</h3>
-{{else}}
-<a href="/user/login">login</a>
-{{/if}}
+{{!-- <a href="/user/login">login</a> --}}
+
