--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-center text-white mt-5">
+<footer class="container-fluid bg-dark text-center text-white mt-5 position-relative bottom-0">
 
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2020 Copyright: 2021 - PSEJ MEAN BOOTCAMP <br> By Magmou &amp; Latyr
