--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -56,8 +56,15 @@
                     <a href="#" class="nav-item nav-link">Messages</a>
                     <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
                 </div>
+
                 <div class="navbar-nav ms-auto">
                     <a href="/user/login" class="nav-item nav-link">Login</a>
+                    {{!-- <h1>dd{{test 5}}</h1> --}}
+                    {{!-- {{#test 5 5}}
+                    <h1>kfkdfkld:k</h1>
+                    {{else}}
+                    <h1>okokok</h1>
+                    {{/test}} --}}
                 </div>
             </div>
         </div>
