--- a/src/views/pages/dashboard.hbs
+++ b/src/views/pages/dashboard.hbs
@@ -1,8 +1,9 @@
 <h1>Dashboard</h1>
 <ul>
-    <li>Name</li>
-    <li>Email</li>
+    <li>{{this.name}}</li>
+    <li>{{this.email}}</li>
 </ul>
+<a class="text-decoration-none" href="/user/profile">Profile</a>
 <form action="/user/logout" method="POST">
     <button type="submit">Logout</button>
 </form>
