--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -19,7 +19,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Reports</a>
                         </li>
-                        {{logged}}
                         {{#if logged}}
 
                                
@@ -34,8 +33,8 @@
                                 </div>
                             </li>
                         {{else}}
-                             <li class="conn-li align-self-center">
-                                <a class="connecter" href="/user/login">Se Connecter</a>
+                             <li class="mr-5 conn-li align-self-center">
+                                <a class="connecter" href="/user/login">Login</a>
                             </li>
                         {{/if}}
                     </ul>
