--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -21,10 +21,10 @@
     </div>
 
 
-    
-</body>
 <script src="/js/bootstrap.js"></script>
 <script src="/js/popper.js"></script>
 <script src="/js/all.min.js"></script>
+<script src="/js/script.js"></script>    
+</body>
 
 </html>
