--- a/src/views/partials/cardRight.hbs
+++ b/src/views/partials/cardRight.hbs
@@ -7,7 +7,7 @@
                       <h6 class="mb-0">Full Name</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      User full name
+                      {{prof.firstname}} {{prof.lastname}}
                     </div>
                   </div>
                   <hr>
@@ -16,7 +16,7 @@
                       <h6 class="mb-0">Email</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      User email
+                     {{prof.email}}
                     </div>
                   </div>
                   <hr>
@@ -34,7 +34,7 @@
                       <h6 class="mb-0">Mobile</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      User mobile
+                      {{prof.phone}}
                     </div>
                   </div>
                   <hr>
@@ -49,7 +49,7 @@
                   <hr>
                   <div class="row">
                     <div class="col-sm-12">
-                      <a class="btn btn-info " target="__blank" href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills">Edit</a>
+                      <button type="button" class="btn btn-info" id="edit_profil">Edit</button>
                     </div>
                   </div>
                 </div>
