fixed header connection status

--- a/src/views/pages/profile.hbs
+++ b/src/views/pages/profile.hbs
@@ -53,18 +53,18 @@
                     </div>
                   </div>
                   <hr>
-                  <div class="row">
+                  <div class="row parent">
                     <div class="col-sm-3">
                       <h6 class="mb-0">Address</h6>
                     </div>
-                    <div class="col-sm-9 text-secondary">
+                    <div id="address" class="col-sm-9 text-secondary">
                       User Address
                     </div>
                   </div>
                   <hr>
                   <div class="row">
                     <div class="col-sm-12">
-                      <a class="btn btn-info " target="__blank" href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills">Edit</a>
+                      <button class="btn btn-primary" onclick="edit()"></button>
                     </div>
                   </div>
                 </div>
