profile is ready

--- a/src/views/pages/profile.hbs
+++ b/src/views/pages/profile.hbs
@@ -12,6 +12,7 @@
           <!-- /Breadcrumb --> --}}
     
           <div class="row gutters-sm ">
+            <p id="tite">Change Your Profile</p>
             {{>cardLeft}}
             {{>cardRight}}
           </div>
