--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -1,53 +1,76 @@
 <div class="container">
+  <div class="row">
+    <div class="col-md-4 offset-md-4">
+      <div class="login-form bg-light mt-1 p-2">
         <div class="row">
-            <div class="col-md-4 offset-md-4">
-                <div class="login-form bg-light mt-4 p-4">
-                            <div class="row">
-            <h1>Reset password</h1>
-            
-                    <form action="/user/reset" method="POST" class="reset-show row g-3">
-                        <h4>Login</h4>
-                        <div class="col-12">
-                            <label>User email</label>
-                            <input type="email" name="email" class="form-control" placeholder="User email">
-                        </div>
-                       
-                        <div class="col-12">
-                            <a class="btn btn-success" href="/user/login">Cancel</a>
-                            <button type="submit" class="btn btn-dark float-end">Reset</button>
-                        </div>
-                    </form>
-                   
-                    <form action="/user/login" method="POST" class="login-show show row g-3">
-                        <h4>Login</h4>
-                        <div class="col-12">
-                            <label>User email</label>
-                            <input type="email" name="email" class="form-control" placeholder="User email">
-                        </div>
-                        <div class="col-12">
-                            <label>Password</label>
-                            <input type="password" name="password" class="form-control" placeholder="Password">
-                        </div>
-                        <div class="col-12">
-                            {{!-- <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="rememberMe">
-                                <label class="form-check-label" for="rememberMe"> Remember me</label>
-                            </div> --}}
-                            <a class=" dropdown-item" onclick="reset()">Forgot password?</a>
-                            {{!-- {{#if error}}
-                            <span>the address or the password is not correct</span>
-                            {{/if}} --}}
-                        </div>
-                        <div class="col-12">
-                            <button type="submit" class="btn btn-dark float-end">Login</button>
-                        </div>
-                    </form>
-                    <hr class="mt-4">
-                    <div class="col-12">
-
-                        <p class="text-center mb-0">Have not account yet? <a href="/user/register">Signup</a></p>
-                    </div>
-                </div>
+            {{#if message}}
+            <div class="message">{{message}}</div>
+            {{/if}}
+          <form action="/user/reset-request" method="POST" class="reset-show row g-3">
+            <h4>Reset password</h4>
+            <div class="col-12">
+              <label>User email</label>
+              <input
+                type="email"
+                name="email"
+                class="form-control"
+                placeholder="User email"
+              />
             </div>
+
+            <div class="col-12">
+              <button
+                class="btn btn-success"
+                onclick="loginReset()"
+              >Cancel</button>
+              <button
+                type="submit"
+                class="btn btn-dark float-end"
+              >Reset</button>
+            </div>
+          </form>
+
+          <form action="/user/login" method="POST" class="login-show row g-3">
+            <h4>Login</h4>
+            {{!-- <div class="bg-color-green pass-reset">{{resetMessage}}</div> --}}
+            <div class="col-12">
+              <label>User email</label>
+              <input
+                type="email"
+                name="email"
+                class="form-control"
+                placeholder="User email"
+              />
+            </div>
+            <div class="col-12">
+              <label>Password</label>
+              <input
+                type="password"
+                name="password"
+                class="form-control"
+                placeholder="Password"
+              />
+            </div>
+            <div class="col-12">
+
+              <a class="forgot-password" onclick="loginReset()">Forgot password?</a>
+
+            </div>
+            <div class="col-12">
+              <button
+                type="submit"
+                class="btn btn-dark float-end"
+              >Login</button>
+            </div>
+          </form>
+          <hr class="mt-4" />
+          <div class="col-12">
+
+            <p class="text-center mb-0">Have not account yet?
+              <a href="/user/register">Signup</a></p>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
+</div>
