--- a/src/views/pages/register.hbs
+++ b/src/views/pages/register.hbs
@@ -11,10 +11,10 @@
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
                 
 
-                <form class="mx-1 mx-md-4" method="POST" action="/user/register">
+                <form class="mx-1 mx-md-4 form-signin needs-validation" novalidate oninput='confirmPassword.setCustomValidity(confirmPassword.value != password.value ? true : false)' " method="POST" action="/user/register">
 
-                  {{#if msg}}
-                      <p class="error bg-color-red me-3 error">{{msg}}</p>
+                  {{#if message}}
+                      <p class="error bg-color-red me-3 error">{{message}}</p>
                   {{/if}}
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
