--- a/src/views/partials/cardLeft.hbs
+++ b/src/views/partials/cardLeft.hbs
@@ -2,12 +2,13 @@
   <div class="card">
     <div class="card-body">
       <div class="d-flex flex-column align-items-center text-center">
-        <img
-          src="https://bootdey.com/img/Content/avatar/avatar7.png"
-          alt="Admin"
-          class="rounded-circle"
-          width="150"
-        />
+        <i
+          class="fa fa-user left-user-icon ml-lg-5"
+          href="#"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        ></i>
         <div class="mt-3">
           <h4>{{prof.firstname}} {{prof.lastname}}</h4>
           {{! <p class="text-secondary mb-1">Full Stack Developer</p>
@@ -16,33 +17,24 @@
                       <button class="btn btn-outline-primary">Message</button> }}
         </div>
       </div>
-    </div>
+      
   </div>
-  <ul class="list-group list-group-flush">
-    <li
-      class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
-    >
-      <h6 class="mb-0">Parametre du Compte</h6>
-    </li>
-    <li
-      class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
-    >
-      <h6 class="mb-0">Panier</h6>
-    </li>
-    <li
-      class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
-    >
-      <h6 class="mb-0">Commandes</h6>
-    </li>
-    <li
-      class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
-    >
-      <h6 class="mb-0">Moyen de paiement</h6>
-    </li>
-    <li
-      class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
-    >
-      <h6 class="mb-0">Avis</h6>
-    </li>
-  </ul>
+<ul class="list-group list-group-flush">
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0">Parametre du Compte</h6>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0">Panier</h6>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0">Commandes</h6>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0">Moyen de paiement</h6>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0">Avis</h6>
+                  </li>
+                </ul>
+    </div>
 </div>
