--- a/src/views/pages/profile.hbs
+++ b/src/views/pages/profile.hbs
@@ -2,6 +2,9 @@
   <div class="main-body">
     <div class="row gutters-sm ">
       <h3 class="text-center" id="tite">Profile</h3>
+      {{#if message}}
+      <div class="message">{{message}}</div>
+      {{/if}}
       {{>cardLeft}}
       {{>cardRight}}
     </div>
