fixed bugs on profile update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,9 @@
     border: solid white;
     font-size: 37px;
 }
-
+header ul li{
+    align-self: center;
+}
 .dropdown-item{
     display: none;
 
