--- a/src/views/pages/register.hbs
+++ b/src/views/pages/register.hbs
@@ -17,32 +17,32 @@
                       <p class="error bg-color-red me-3 error">{{message}}</p>
                   {{/if}}
                   <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <i class="align-self-end mb-2 fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <label class="form-label" for="f-name">First Name</label>
+                      <label class="form-label" for="f-name">First Name*</label>
                       <input type="text" name="firstname" id="f-name" class="form-control" required />
                       
                     </div>
                   </div>
                   <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <i class="align-self-end mb-2 fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <label class="form-label" for="l-name">Last Name</label>
+                      <label class="form-label" for="l-name">Last Name*</label>
                       <input type="text" name="lastname" id="l-name" class="form-control" />
                     </div>
                   </div>
                   {{!-- firstname, lastname, email, telephone, role, password --}}
 
                   <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                    <i class="align-self-end mb-2 fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <label class="form-label" for="e-mail">Email</label>
+                      <label class="form-label" for="e-mail">Email*</label>
                       <input type="email" name="email" id="e-mail" class="form-control" />
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-mobile fa-lg me-3 fa-fw"></i>
+                    <i class="align-self-end mb-2 fas fa-mobile fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="phone">Phone</label>
                       <input type="phone" name="phone" id="phone" class="form-control" />
@@ -50,17 +50,17 @@
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                    <i class="align-self-end mb-2 fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <label class="form-label" for="password">Password</label>
-                      <input type="password" name="password" id="password" class="form-control" />
+                      <label class="form-label" for="password">Password*</label>
+                      <input type="password" name="password" id="password" class="form-control" required/>
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                    <i class="align-self-end mb-2 fas fa-key fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <label class="form-label" for="pass-bis">Repeat your password</label>
+                      <label class="form-label" for="pass-bis">Repeat your password*</label>
                       <input type="password" name="password2" id="pass-bis" class="form-control" />
                     </div>
                   </div>
