--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,6 +77,9 @@ footer{
 
 .message{
     background-color: rgb(153, 214, 153);
+    text-align: center;
+    margin:auto;
+    margin-bottom: 10px;
 }
 .left-user-icon{
     font-size: 60px;
