--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -1,4 +1,9 @@
 
 <div class="container">
     <h1 class="text-center">MAIN</h1>
+        {{#if message}}
+    <div class="message">
+        {{message}}
+    </div>
+        {{/if}}
 </div>
