--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -20,10 +20,7 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="#">Messages</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Reports</a>
+            <a class="nav-link" href="/user/admin">Admin</a>
           </li>
           {{#if logged}}
 
